--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 
 $regular: 'Roboto', sans-serif;
-$green: #03aeb4;
-
+$darkBlue: #2a9fc1;
+$lightBlue: #2eb7db;
+$veryDarkBlue: #002c4d;
 
 html,
 body {
@@ -70,24 +71,28 @@ body {
     }
     &__content {
       width: 100%;
-      padding: 80px 40px 0;
+      padding: 20px 40px 0;
       opacity: 0;
       animation: slideright 0.8s ease forwards;
       animation-delay: 0.9s;
     }
     &__logo {
       width: 160px;
+      padding-bottom: 20px;
     }
     &__title {
       @include text;
-      color: $green;
+      color: $darkBlue;
       font-size: 30px;
       font-weight: 700;
       padding-top: 30px;
+      & span {
+        color: $veryDarkBlue;
+      }
     }
     &__subtitle {
       @include text;
-      color: $green;
+      color: $darkBlue;
       font-size: 18px;
       font-weight: 400;
       padding: 30px 0;
@@ -132,7 +137,7 @@ body {
         padding-top: 100px;
       }
       &--right {
-        background-color: $green;
+        background-color: $darkBlue;
         padding-top: 100px;
       }
       &--image {
@@ -185,7 +190,7 @@ body {
       text-align: center;
       overflow: hidden;
       &--left {
-        background-color: $green;
+        background-color: $darkBlue;
         padding-top: 100px;
       }
       &--right {
@@ -194,7 +199,7 @@ body {
         padding-top: 100px;
       }
       &--image {
-        background-color: $green;
+        background-color: $darkBlue;
         padding: 0;
       }
     }
@@ -292,7 +297,7 @@ body {
       @include text;
       padding-left: 80px;
       padding-bottom: 5px;
-      border-bottom: solid 3px $green;
+      border-bottom: solid 3px $darkBlue;
       font-weight: 500;
     }
     &__under {
@@ -338,7 +343,7 @@ body {
       position: absolute;
       top: -40px;
       left: 20px;
-      color: $green;
+      color: $darkBlue;
       font-size: 150px;
       font-weight: 700;
     }
@@ -385,7 +390,7 @@ body {
         bottom: 0;
         right: 0;
         z-index: -1;
-        background-color: $green;
+        background-color: $darkBlue;
         border-radius: 8px;
         transition: transform 0.3s ease-in-out;
         transform: scaleX(0);
@@ -423,6 +428,9 @@ body {
   .es-kv {
     &__wrapper {
       flex-wrap: nowrap;
+    }
+    &__logo {
+      padding-bottom: 60px !important;
     }
     &__content {
       width: 50% !important;
