--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -345,7 +345,7 @@ body {
       gap: 40px 20px;
     }
     &__single {
-      width: 250px;
+      width: 300px;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -361,14 +361,18 @@ body {
       @include text;
       position: absolute;
       top: -40px;
-      left: 20px;
-      color: $darkBlue;
+      left: 40px;
+      color: $lightBlue;
       font-size: 150px;
       font-weight: 700;
+      &--2{
+        top: 10px;
+      }
     }
     &__image {
       transition: transform 0.3s;
       @include img;
+      padding-bottom: 20px;
       z-index: 1;
       max-height: 320px;
     }
@@ -397,7 +401,7 @@ body {
       text-align: center;
       text-decoration: none;
       transition: all 0.3s ease-in-out;
-      background: #028f94;
+      background: $lightBlue;
       transition: color 0.3s ease-in-out;
       z-index: 1;
       border-radius: 8px;
